# GP-access-control-plane

./: .gitignore  README.md  openapi.json  pyproject.toml
configs/: orchestrator.example.yaml
docs/: headless-runtime-core-api.md
scripts/: gp-root-helper.sh  install-raspberry-pi.sh
src/gp_control_plane/: __init__.py  backups.py  cli.py  config.py  diagnostics.py  domain_sources.py  evidence.py  githubsync.py  healthcheck.py  jobs.py  models.py  release_update.py  releases.py  render.py  rules.py  simpleyaml.py  state.py  storage.py  strategies.py  strategy_finder.py  strategy_safety.py  validation.py  zapret2.py
src/gp_control_plane/web/: __init__.py  app.py
tests/: test_backups.py  test_cli_safety.py  test_config.py  test_domain_sources.py  test_githubsync.py  test_healthcheck.py  test_installer.py  test_jobs.py  test_releases.py  test_render.py  test_state.py  test_storage.py  test_strategy_finder.py  test_strategy_safety.py  test_validation.py  test_web_ui.py  test_zapret2.py
