[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-access-control-plane"
version = "0.1.0"
description = "Raspberry Pi control plane for GP traffic policy and zapret strategy dry-run orchestration."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gp-control-plane = "gp_control_plane.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
