[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-access-control-plane"
version = "0.3.2-alpha.4"
description = "Raspberry Pi web UI for zapret2 strategy discovery."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gp-control-plane = "gp_control_plane.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
